--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+#.tps files are showing up as PL/SQL in GitHub, but it's actually TexturePacker Settings
+*.tps linguist-detectable=false
+# GitHub doesn't support DazScript, so the next closest thing is QtScript
+*.dsa linguist-language=QtScript
