--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,7 @@
 * text=auto
 #.tps files are showing up as PL/SQL in GitHub, but it's actually TexturePacker Settings
 *.tps linguist-detectable=false
-# GitHub doesn't support DazScript, so the next closest thing is QtScript
-*.dsa linguist-language=RPM Spec
+# GitHub doesn't support DazScript, so the next closest thing is Qt Script
+#Since Qt Script has a space in it's name, we 
+*.dsa linguist-language=558193693
+# *.dsa linguist-language=QML
